--- a/feedly/users/templates/createpost.html
+++ b/feedly/users/templates/createpost.html
@@ -41,7 +41,7 @@
 
         {% if form.image %}
         <label class="abt">About Image:</label>
-        <p><textarea name="about" cols="40" rows="3" required='' id="id_about" class="txt" placeholder="Whats On Your Mind.. "></textarea></p>
+        <p><textarea name="about" cols="40" rows="3" id="id_about" class="txt" placeholder="Whats On Your Mind.. "></textarea></p>
         <label class="abt">Image:</label>
         <p><input type="file" name="image" accept="image/*" id="id_image" class="choose"></p>
         {% endif %}
@@ -51,7 +51,7 @@
         {% endif %}
         {% if form.video %}
         <label class="abt">About Video:</label>
-        <p > <textarea name="about" cols="40" rows="3" required="" id="id_about" class="txt" placeholder="Whats On Your Mind.. " ></textarea></p>
+        <p > <textarea name="about" cols="40" rows="3" id="id_about" class="txt" placeholder="Whats On Your Mind.. " ></textarea></p>
         <label class="abt">Video:</label>
         <p><input type="file" name="video" id="id_video" class="choose"></p>
         {% endif %}
