--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -20,7 +20,7 @@
         <h4>{{post.about }}</h4>
         {% endif %}
         {%if post.text %}
-        <h4>{{ post.text }}</h4>
+        <p  style="background-color:#D2D4D5;padding:2%;width:100%;font-size:150%;border-radius:10px">{{ post.text }}</p>
         {% endif %}
     </div>
     {% if post.image %}
@@ -54,7 +54,7 @@
         {% if post.video %}
         <div id="cmntmodal" ><i onclick="item('{{post.id}}','video','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.video.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
-        <p style="padding-left:9px">200</p>
+
         <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
     </div>
 </div>
@@ -128,7 +128,7 @@
    <div class="cardh">
      <h4 id="about"></h4>
     </div>
-       <h4 id="postitem3"></h4>
+       <p style="background-color:#F5F6F7;padding:2%;width:100%;font-size:150%;border-radius:10px;border:2px solid gray" id="postitem3"></p>
        <video class="fakeimg" id="postitem2" controls></video>
     <img src="/static/loginboy2.png" alt="Avatar" class="fakeimg" id="postitem">
        <div id ="comment">
