trying to solve merge conflicts

--- a/feedly/static/css/home.css
+++ b/feedly/static/css/home.css
@@ -105,9 +105,7 @@ font-weight: 500
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-}
+
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -121,12 +119,14 @@ font-weight: 500
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
+    margin-right:10%;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     /* margin-left: 85%; */
+    opacity:0.8;
     right:0;
 }
 
@@ -139,7 +139,11 @@ font-weight: 500
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {background-color: darkgrey;
+ color:black;
+ font-weight:bold;
+ font-size:120%;
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
@@ -169,26 +173,27 @@ font-weight: 500
     display: block;
     text-align: center;
     padding: 10px;
-    transition: all 0.3s ease;
+    transition: all 1s ease;
     color: white;
-    font-size: 270%;
+    font-size: 2.5em;
 }
 
 .icon-bar a:hover {
     background-color: #000;
     color:#4AA82B;
     transform:scale(0.9,0.9);
+    transition:all 1s ease;
 
 }
 .side-content{
     font-size:35%;
     display: none;
-    transition: .5s ease;
+    transition:all 1s ease;
     font-family: 'Lato', sans-serif;
     
 }
 
-.icon-bar:hover .side-content{
+.icon-bar a:hover .side-content{
     display: block;
     
 }
@@ -332,7 +337,9 @@ img.avatar {
    float: left;
    width: 27%;
    padding-left: 4.5%;
-   margin-top: 75px;
+   margin-top:90px;
+   margin-left:60%;
+   position:fixed;
 }
 
 
@@ -568,4 +575,57 @@ width: 100%;
 }
 .icon-bar .active {
     background-color: green;
+}
+.rightc .card{
+ float: left;
+   width: 23%;
+   margin-top:6%;
+   margin-left:65%;
+   position:absolute;
+}
+
+.nopost{
+width:40%;
+margin-left:20%;
+float:left;}
+
+
+
+
+.commenter{
+background-color:#E5E8E8;
+border:none;
+border-top:2px solid #B2BABB;
+margin-top:2%;
+padding-top:1%;
+border-left:2px solid #B2BABB;
+padding-left:2%;
+}
+
+.comment_time{
+background-color:#E5E8E8;
+width:100%;
+font-style:italic;
+border-left:2px solid #B2BABB;
+padding-left:2%;
+
+}
+
+.comment_content{
+background-color:#E5E8E8;
+border:none;
+border-bottom:2px solid #B2BABB;
+padding-bottom:1%;
+padding-top:0.8%;
+font-size:120%;
+font-weight:400;
+border-left:2px solid #B2BABB;
+padding-left:3  %;
+}
+
+.cmnthere{
+   border: 2px solid darkgrey;
+}
+.comment_content{
+white-space: pre-wrap;
 }
