--- a/feedly/users/templates/createpost.html
+++ b/feedly/users/templates/createpost.html
@@ -3,61 +3,64 @@
 {% block post %}
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-double-up"></i></button>
 
-<div class="cvrimg">
-    <img src="/static/FRANCE.svg" style="width:100%;">
-</div>
+<!--<div class="cvrimg">-->
+    <!--<img src="/static/FRANCE.svg" style="width:100%;">-->
+<!--</div>-->
 
-<div class="pgimg">
-    <img src="{{ user.myprofile.avatar.url }}" style="height:100%;">
-</div>
-<div class="sfname">
-    <h2 >{{ user.username }}</h2></div>
+<!--<div class="pgimg">-->
+    <!--<img src="{{ user.myprofile.avatar.url }}" style="height:100%;">-->
+<!--</div>-->
+<!--<div class="sfname">-->
+    <!--<h2 >{{ user.username }}</h2></div>-->
 
 
 
-<div>
-        <div class="imgcontainer">
-            <img src="/static/ballon.svg" alt="Avatar" class="avatar">
+<div class="cont">
+        <div class="imgcont">
+            <img src="/static/ballon.svg" alt="Avatar" class="avatar" style="width:35%;margin-top:1%;">
         </div>
-        <h1 class="lihead" style="color:rgb(95, 95, 95)">CREATE POST</h1>
+        <h1 class="lihead" style="color:rgb(95, 95, 95);margin-top:-8%">CREATE POST</h1>
         <!--<div class="upimg">-->
             <!--<textarea rows="7" cols="50" name="comment" placeholder="whats on your mind.." class="txt"></textarea>-->
         <!--</div>-->
+<div class="createpost">
+
+    <div class="cp-icons">
+        <a href="{% url 'createpost' user.id 'text' %}">
+            <button id ="text"  class="srchbarbtn srchbar" ><h1><i style="color:#888;" class="fa fa-pencil" aria-hidden="true"></i></h1></button>
+        </a>
+        <a href="{% url 'createpost' user.id 'image' %}">
+            <button id = "image"  class="srchbarbtn srchbar"><h1><i  class="fa fa-camera" onclick="document.getElementById('cf').style.display='block'" style="color:#888;"></i></h1></button>
+        </a>
+        <a href="{% url 'createpost' user.id 'video' %}">
+            <button  id = "video" class="srchbarbtn srchbar" ><h1><i  class="fa fa-video" style="color:#888;" ></i></h1></button>
+        </a>
+    </div>
     <form class="cp-content " method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         {% if form.image %}
-        <label>About:</label>
-        <p class="txt">{{ form.about }}</p>
-        <label>Image:</label>
-        <p>{{ form.image }}</p>
+        <label class="abt">About Image:</label>
+        <p><textarea name="about" cols="40" rows="3" id="id_about" class="txt" placeholder="Whats On Your Mind.. "></textarea></p>
+        <label class="abt">Image:</label>
+        <p><input type="file" name="image" accept="image/*" id="id_image" class="choose"></p>
         {% endif %}
         {% if form.text %}
-        <label>Text:</label>
-        <p class="text">{{ form.text }}</p>
+        <label class="abt">Text:</label>
+        <p><textarea class="txt"  name="text" cols="40" rows="3" required="" id="id_text" placeholder="Whats On Your Mind.. "></textarea></p>
         {% endif %}
         {% if form.video %}
-        <label>About:</label>
-        <p class="text"> {{ form.about }}</p>
-        <label>Video:</label>
-        <p>{{ form.video}}</p>
+        <label class="abt">About Video:</label>
+        <p > <textarea name="about" cols="40" rows="3" id="id_about" class="txt" placeholder="Whats On Your Mind.. " ></textarea></p>
+        <label class="abt">Video:</label>
+        <p><input type="file" name="video" id="id_video" class="choose"></p>
         {% endif %}
         <div class="cpmenu">
-        <button type="submit" class="uploadbtn" > <i class="fa fa-upload" ></i> Upload</button>
+        <button type="submit" class="uploadbtn" > <i class="fa fa-upload" placeholder="Whats On Your Mind.. "></i> Upload</button>
         </div>
     </form>
+</div>
 
-        <div class="cpmenu">
-            <a href="{% url 'createpost' user.id 'image' %}">
-                <button class="srchbarbtn srchbar"><h1><i id ="image" class="fa fa-camera" onclick="document.getElementById('cf').style.display='block'" style="color:#888"></i></h1></button>
-            </a>
-            <a href="{% url 'createpost' user.id 'video' %}">
-                <button class="srchbarbtn srchbar" ><h1><i id = "video" class="fa fa-video" style="color:#888" ></i></h1></button>
-            </a>
-            <a href="{% url 'createpost' user.id 'text' %}">
-                <button class="srchbarbtn srchbar" ><h1><i id ="text" style="color:#888" class="fa fa-font" aria-hidden="true"></i></h1></button>
-            </a>
-        </div>
-    </form>
+
 </div>
 {% endblock %}
