--- a/feedly/users/templates/base.html
+++ b/feedly/users/templates/base.html
@@ -91,8 +91,6 @@ video.play();
 var vi = document.getElementById('videopost'+time);
 vi.pause();
 }
-var form = document.getElementById('comment_form');
-     form.action = '/comment/'+id+'/';
 {% for comment in comments %}{
    if ({{comment.post.id}} == id )
    {
@@ -117,6 +115,8 @@ var form = document.getElementById('comment_form');
 }
 {% endfor %}
 document.getElementById('id03').style.display='block';
+var form = document.getElementById('comment_form');
+     form.action = '/comment/'+id+'/';
     }
 
 
@@ -165,13 +165,33 @@ function chBackcolor() {
            }
 
           },
-          error:function(rs,e){
-          console.log(rs.responseText);
-          },
           });
         });
       });
     </script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+    var frm = $('#comment_form');
+    $('#comment_form').on('submit',function (event) {
+    event.preventDefault();
+    console.log('in comment ajax');
+        $.ajax({
+            type: frm.attr('method'),
+            url: frm.attr('action'),
+            data: frm.serialize(),
+            success: function (data) {
+            console.log('out of ajax');
+            console.log(data.comment);
+            $("#comment").append(data.comment);
+
+    },
+            error: function(data) {
+                console.log('wrong');
+            }
+        });
+    });
+    });
+</script>
     <style>
     {% if form.image %}
        #image
