--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -31,31 +31,23 @@
         <source src="{{ post.video.url }}" type="video/mp4" ></video>
     {% endif %}
     <div class="cardf">
-        <form action="{% url 'vote' %}" method="POST">
-            {{ post.result }}
-            <input type="hidden" name="post" value="{{post.pk}}">
-            {% csrf_token %}
-            {% if post in post_voted_list %}
-            <button type="submit" style="border:none" id="like" value="{{post.id}}">
-                <i class="like fa fa-thumbs-down" style="font-size: 150%;"></i></button>
-            {% else %}
-            <button type="submit" style="border:none" id ="like" value="{{post.id}}">
-                <i class="like fa fa-thumbs-up" style="font-size: 150%;"></i></button>
-            {% endif %}
-        </form>
-
-        <!--<i class="like fa fa-thumbs-down" style="padding-left:9px"></i>-->
+            <div id="{{post.id}}">{{ post.result }}</div>
+        {% if post in post_voted_list %}
+                <i class="like fa fa-thumbs-down" style="font-size: 150%;" value="{{post.id}}" id="like{{post.id}}"></i></button>
+        {% else %}
+                <i class="like fa fa-thumbs-up" style="font-size: 150%;" value="{{post.id}}" id="like{{post.id}}"></i></button>
+        {% endif %}
         {% if post.image %}
-        <div id="cmntmodal" ><i onclick="item('{{post.id}}','image','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.image.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
+        <div id="cmntmodal" ><i onclick="item('{{post.id}}','image','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.image.url}}')" class="fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
         {% if post.text %}
-        <div id="cmntmodal" ><i onclick="item('{{post.id}}','text','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.text}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
+        <div id="cmntmodal" ><i onclick="item('{{post.id}}','text','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.text}}')" class="fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
         {% if post.video %}
-        <div id="cmntmodal" ><i onclick="item('{{post.id}}','video','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.video.url}}')" class="like fa fa-comments" style="padding-left:9px"></i></div>
+        <div id="cmntmodal" ><i onclick="item('{{post.id}}','video','{{ post.post_by.myprofile.avatar.url }}','{{ post.post_by }}','{{post.about}}','{{post.post_on}}','{{post.video.url}}')" class="fa fa-comments" style="padding-left:9px"></i></div>
         {% endif %}
 
-        <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
+        <i class="fa fa-paper-plane" style="padding-left:9px"> </i>
     </div>
 </div>
 </div>
@@ -131,18 +123,18 @@
        <p style="background-color:#F5F6F7;padding:2%;width:100%;font-size:150%;border-radius:10px;border:2px solid gray" id="postitem3"></p>
        <video class="fakeimg" id="postitem2" controls></video>
     <img src="/static/loginboy2.png" alt="Avatar" class="fakeimg" id="postitem">
+       <h3 style="margin-top:20px">Your Comments:</h3>
+       <div>
+           <form id="comment_form"  method="post">
+               {% csrf_token %}
+               <textarea name="content" cols="85" rows="5" maxlength="300" required="" id="id_content" style="border: 2px solid darkgrey;border-radius:6px;font-size:130%;" placeholder="your comments here.."></textarea>
+               <button type="submit" class="cmntbtn" style="margin-left:85%;font-size:120%;margin-top:1%">comment</button>
+           </form>
        <div id ="comment">
 <!--comment goes here-->
        </div>
-<h3 style="margin-top:20px">Your Comments:</h3>
-<div>
-    <form id="comment_form"  method="post">
-        {% csrf_token %}
-        <textarea name="content" cols="85" rows="5" maxlength="300" required="" id="id_content" style="border: 2px solid darkgrey;border-radius:6px;font-size:130%;" placeholder="your comments here.."></textarea>
-        <button type="submit" class="cmntbtn" style="margin-left:85%;font-size:120%;margin-top:1%">comment</button>
-    </form>
-<!--<textarea rows="4" cols="50" name="comment" form="usrform"  placeholder="ggw" style="width:100%"></textarea>-->
-<!--<div class="edittxt">-->
+
+
 
 
 
