--- a/feedly/users/templates/base.html
+++ b/feedly/users/templates/base.html
@@ -58,6 +58,9 @@
         return true;
 
 }
+
+
+
 function item(id,type,dpurl,postby,about,time,posturl)
 {
 document.getElementById('dpurl').setAttribute("src", dpurl);
@@ -71,7 +74,8 @@ document.getElementById('about').style.display = 'none';
 document.getElementById('postitem2').style.display='none';
 document.getElementById('postitem').style.display='none';
 }
-if (type == 'image'){
+if (type == 'image')
+{
 document.getElementById('postitem').style.display='block';
 document.getElementById('about').style.display = 'block';
 document.getElementById('postitem').setAttribute("src", posturl);
@@ -79,7 +83,8 @@ document.getElementById('about').innerHTML = about;
 document.getElementById('postitem2').style.display='none';
 document.getElementById('postitem3').style.display='none';
 }
-if (type == 'video'){
+if (type == 'video')
+{
 document.getElementById('postitem2').style.display='block';
 document.getElementById('about').style.display = 'block';
 document.getElementById('postitem2').setAttribute("src", posturl);
@@ -91,8 +96,17 @@ video.play();
 var vi = document.getElementById('videopost'+time);
 vi.pause();
 }
-{% for comment in comments %}{
-   if ({{comment.post.id}} == id )
+update_comment(id);
+
+document.getElementById('id03').style.display='block';
+var form = document.getElementById('comment_form');
+     form.action = '/comment/'+id+'/';
+    }
+
+function update_comment(postid){
+{% for comment in comments %}
+{
+   if ({{comment.post.id}} == postid )
    {
     var user = document.createElement("h3");
     user.setAttribute("class","commenter");
@@ -100,7 +114,7 @@ vi.pause();
     comtime.setAttribute("class","comment_time");
     var com = document.createElement("p");
     com.setAttribute("class","comment_content");
-    var cont = document.createTextNode('"{{ comment.content }}"');
+    var cont = document.createTextNode("'{{ comment.content }} '");
     var comt = document.createTextNode('{{ comment.comment_on }}');
     var comb = document.createTextNode('{{ comment.comment_by }}');
     user.appendChild(comb);
@@ -114,11 +128,7 @@ vi.pause();
 
 }
 {% endfor %}
-document.getElementById('id03').style.display='block';
-var form = document.getElementById('comment_form');
-     form.action = '/comment/'+id+'/';
-    }
-
+}
 
 function closemodal(){
 var vid=document.getElementById('postitem2');
@@ -140,7 +150,8 @@ function chBackcolor() {
     </script>
     <script type="text/javascript">
         $(document).ready(function(){
-          $(".like").on('click',function(){
+          $(".like").on('click',function(event){
+          event.preventDefault();
           console.log("in ajax");
           var postid = $(this).attr('value');
           console.log(postid);
@@ -179,11 +190,25 @@ function chBackcolor() {
             type: frm.attr('method'),
             url: frm.attr('action'),
             data: frm.serialize(),
-            success: function (data) {
+            success: function(data){
+            console.log(data);
             console.log('out of ajax');
-            console.log(data.comment);
-            $("#comment").append(data.comment);
-
+            var user = document.createElement("h3");
+            user.setAttribute("class","commenter");
+            var comtime = document.createElement("p");
+            comtime.setAttribute("class","comment_time");
+            var com = document.createElement("p");
+            com.setAttribute("class","comment_content");
+            var comb = document.createTextNode(data.comment_by);
+            console.log(data.comment_by);
+            user.appendChild(comb);
+            document.getElementById("comment").appendChild(user);
+            var comt = document.createTextNode(data.comment_on);
+            comtime.appendChild(comt);
+            document.getElementById("comment").appendChild(comtime);
+            var cont = document.createTextNode(" '" + data.comment+ "' ");
+            com.appendChild(cont);
+            document.getElementById("comment").appendChild(com);
     },
             error: function(data) {
                 console.log('wrong');
